--- a/signup.html
+++ b/signup.html
@@ -67,7 +67,7 @@
         <div class="col-lg-6 h-100 text-left text-lg-left my-auto">
           <ul class="list-inline mb-2">
             <li class="list-inline-item">
-              <a href="family.html" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
